@@ -43,6 +43,7 @@ Version 1.3.1+svn:
    * fix problems with colour cursor in fullscreen (slow speed, bug #7555 and bug #6052).
    * new color cursors
    * fixed some scrolling corner cases (eg. fights happening partially offscreen)
+   * automatic scrolling accelerates now (like a physical mass would)
  * sound
    * new or improved sounds: hatchet
    * sounds for user interface events
